--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "# Steps 1. load serial-sketch to arduino   - you can see serial: `cat /dev/ttyACM0`",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
